# celery-yandex-serverless

./: README.md  pyproject.toml
celery_yandex_serverless/: django.py
