[tool.poetry]
name = "celery-yandex-serverless"
version = "0.1.1"
description = "Package for starting Celery worker inside Yandex Cloud Serverless Container"
authors = ["atnartur <i@atnartur.dev>"]
readme = "README.md"
packages = [{include = "celery_yandex_serverless"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4"
boto3 = "^1.26.101"
pycurl = "^7.45.2"
celery = "^5.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
