[tool.poetry]
name = "celery-yandex-serverless"
version = "0.1.2"
description = "Package for starting Celery worker inside Yandex Cloud Serverless Container"
authors = ["atnartur <i@atnartur.dev>"]
readme = "README.md"
packages = [{include = "celery_yandex_serverless"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0.0"
boto3 = "^1.28.80"
pycurl = "^7.45.2"
celery = "^5.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
